changed images for sections HomePage and Signup Page, fixed logo position on tablet ad mobile versions

--- a/src/components/AdvantagesSection/AdvantagesSection.module.css
+++ b/src/components/AdvantagesSection/AdvantagesSection.module.css
@@ -10,7 +10,7 @@
   max-width: 343px;
   height: 353px;
   border-radius: 30px;
-  background-image: url("../../photo/mob/drinking-woman-1x.webp");
+  background-image: url("../../photo/mob/hero-mob@1x.webp");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -23,7 +23,7 @@
   only screen and (min-resolution: 192dpi),
   only screen and (min-resolution: 2dppx) {
   .mainImg {
-    background-image: url("../../photo/mob/drinking-woman-2x.webp");
+    background-image: url("../../photo/mob/hero-mob@2x.webp");
   }
 }
 
@@ -167,7 +167,7 @@
   .mainImg {
     max-width: 768px;
     height: 446px;
-    background-image: url("../../photo/tab/drinking-woman-1x.webp");
+    background-image: url("../../photo/tab/hero-tab@1x.webp");
   }
 
   @media only screen and (-webkit-min-device-pixel-ratio: 2),
@@ -176,7 +176,7 @@
     only screen and (min-resolution: 192dpi),
     only screen and (min-resolution: 2dppx) {
     .mainImg {
-      background-image: url("../../photo/tab/drinking-woman-2x.webp");
+      background-image: url("../../photo/tab/hero-tab@2x.webp");
     }
   }
 
@@ -253,7 +253,7 @@
   .mainImg {
     width: 100%;
     height: 100%;
-    background-image: url("../../photo/desk/drinking-woman-1x.webp");
+    background-image: url("../../photo/desk/hero-desk@1x.webp");
   }
 
   @media only screen and (-webkit-min-device-pixel-ratio: 2),
@@ -262,7 +262,7 @@
     only screen and (min-resolution: 192dpi),
     only screen and (min-resolution: 2dppx) {
     .mainImg {
-      background-image: url("../../photo/desk/drinking-woman-2x.webp");
+      background-image: url("../../photo/desk/hero-desk@2x.webp");
     }
   }
 
